[package]
name = "traverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "2.0.13", features = ["full", "extra-traits", "parsing", "visit", "visit-mut"]}
walkdir = "2"
decimal = "2.1.0"
gix = "0.50.1"
git2 = "0.17.2"